[gd_scene load_steps=9 format=3 uid="uid://cf4eu3sa4n3ti"]

[ext_resource type="Texture2D" uid="uid://cmd7qbws0xws4" path="res://objects/ball/ball.png" id="1_owwtn"]
[ext_resource type="Script" path="res://screens/customize.gd" id="1_tkxw0"]
[ext_resource type="Script" path="res://addons/sxgd-icon-font/nodes/button.gd" id="3_bxx4q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l4qgl"]
atlas = ExtResource("1_owwtn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ayag"]
atlas = ExtResource("1_owwtn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4if5a"]
atlas = ExtResource("1_owwtn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2plhq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4qgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ayag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4if5a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ImageTexture" id="ImageTexture_5wq2w"]

[node name="TestCustom" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tkxw0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.304688, 0.304688, 0.304688, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="Original" type="AnimatedSprite2D" parent="MarginContainer"]
unique_name_in_owner = true
texture_filter = 1
scale = Vector2(18, 18)
sprite_frames = SubResource("SpriteFrames_2plhq")
autoplay = "default"

[node name="Draw" type="Sprite2D" parent="MarginContainer"]
unique_name_in_owner = true
texture_filter = 1
scale = Vector2(18, 18)
texture = SubResource("ImageTexture_5wq2w")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -64.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0

[node name="DrawIcon" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_icon = true
script = ExtResource("3_bxx4q")
icon_name = "pencil"

[node name="PickerIcon" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_icon = true
script = ExtResource("3_bxx4q")
icon_name = "eye-dropper"

[node name="EraserIcon" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_icon = true
script = ExtResource("3_bxx4q")
icon_name = "eraser"

[node name="ColorPicker" type="ColorPickerButton" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="SaveAndQuit" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Save and quit"
